...
            .clickable(enabled = enabled) {
                showBottomSheet = true
            }
            .padding(start = 8.dp)
            .semantics {
                role = Role.DropdownList
                contentDescription = "Country selector"
            },
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(4.dp)
    ) {
        Text(
            text = selectedCountry.flagEmoji,
...
